Makes inputs on mobile/lower res smaller to avoid clipping.

--- a/tcggen/public/css/main.css
+++ b/tcggen/public/css/main.css
@@ -231,7 +231,7 @@ h2{
   }
 
   input[type=text], input[type=submit], input[type=password], button{
-    width:98%;
+    width:95%;
   }
 
   #lb-close{
